--- a/tools/convert.html
+++ b/tools/convert.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subtitle Text Parser</title>
+    <title>Summariser</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -14,21 +14,48 @@
         <i class="fas fa-home"></i>
     </a>
     
-    <div id="app" class="container-fluid p-3 full-height">
-        <div class="row h-100">
-            <!-- Textbox 1 -->
-            <div class="col textarea-container p-4">
-                <textarea class="form-control" v-model="inputText" placeholder="Paste subtitle text here"></textarea>
+    <div id="app">
+        <div class="container-fluid pt-5">
+            <!-- Alert bar for displaying errors -->
+            <div class="row">
+                <div class="col">
+                    <div class="alert alert-danger" v-if="errorMessage">
+                        {{ errorMessage }}
+                    </div>
+                </div>
             </div>
-            <!-- Textbox 2 -->
-            <div class="col textarea-container p-4">
-                <textarea class="form-control" v-model="outputText" placeholder="Processed text will appear here" readonly></textarea>
+            <div class="row row-cols-1 row-cols-sm-2">
+                <div class="col">
+                    <textarea class="form-control" :readonly="isInputReadOnly" v-model="inputText" placeholder="Paste original text here"></textarea>
+                </div>
+                <!-- Textbox 2 -->
+                <div class="col">
+                    <textarea class="form-control" v-model="outputText" placeholder="Summarised text will appear here" readonly></textarea>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <!-- Button -->
-            <div class="col d-flex justify-content-center">
-                <button class="btn btn-primary mt-2" @click="processText">Format Zoom Chat transcript</button>
+            <div class="row pt-3">
+                <!-- Button -->
+                <div class="d-flex justify-content-center">
+                    <div class="dropdown me-2">
+                        <button disabled class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            To be implemented
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item" href="#">A</a></li>
+                            <li><a class="dropdown-item" href="#">B</a></li>
+                            <li><a class="dropdown-item" href="#">C</a></li>
+                            <li><a class="dropdown-item" href="#">D</a></li>
+                        </ul>
+                    </div>
+
+                    <button class="btn btn-primary me-2" @click="processText" :disabled="isProcessing">
+                        <span v-if="isProcessing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        <span v-else>Summarise</span>
+                    </button>
+
+                    <!-- New Button for Setting API Key -->
+                    <button class="btn btn-secondary" @click="setApiKey">{{ apiKeyButtonLabel }}</button>
+                </div>
             </div>
         </div>
     </div>
@@ -37,6 +64,8 @@
     <script src="https://unpkg.com/vue@3.2.22"></script>
     <!-- Include Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script>
         const { createApp } = Vue;
 
@@ -44,66 +73,117 @@
             data() {
                 return {
                     inputText: '',
-                    outputText: ''
+                    outputText: '',
+                    openApiKey: '',  // Vue variable to store the OpenAPI key,
+                    errorMessage: '', // New property for error message
+                    isProcessing: false, // to track the state of the Axios request
+                    isInputReadOnly: false // to make input textarea read-only
+
                 };
             },
+            computed: {
+                apiKeyButtonLabel() {
+                    return this.openApiKey ? 'Update OpenAPI API Key' : 'Set OpenAPI API Key';
+                }
+            },
+            created() {
+                this.checkLocalStorageForOpenApiKey();
+            },
             methods: {
+                checkLocalStorageForOpenApiKey() {
+                    console.log("Checking for existing openapi_key");
+                    const openApiKey = localStorage.getItem('openapi_key');
+                    if (openApiKey) {
+                        this.openApiKey = openApiKey;
+                    }
+                },
                 parseAndConcatenateSubtitleText(subtitleText) {
                     // Remove "WEBVTT" and subsequent newlines if present
                     const processedText = subtitleText.startsWith("WEBVTT") ? subtitleText.split('\n').slice(3).join('\n') : subtitleText;
                     
-                    // Splits the subtitle text into sections
-                    const sections = subtitleText.trim().split('\n\n');
-                    const concatenatedData = [];
+                    // Split the text into lines
+                    const lines = processedText.split('\n');
 
-                    sections.forEach(section => {
-                        const lines = section.split('\n');
-                        const sequenceNumber = parseInt(lines[0]);
-                        const timestampRange = lines[1];
-                        const speakerAndText = lines.slice(2).join(' ');
+                    // Array to hold the objects
+                    const messages = [];
 
-                        let speaker = null;
-                        let text = speakerAndText;
+                    // Regular expression to match the pattern and extract name and message
+                    const regex = /\[.*\] (.+?): (.+)/;
 
-                        if (speakerAndText.includes(':')) {
-                            [speaker, text] = speakerAndText.split(':', 2);
-                            speaker = speaker.trim();
-                        }
-                        text = text.trim();
-
-                        if (concatenatedData.length > 0 && speaker === concatenatedData[concatenatedData.length - 1].speaker 
-                                && sequenceNumber === concatenatedData[concatenatedData.length - 1].sequenceNumber[concatenatedData[concatenatedData.length - 1].sequenceNumber.length - 1] + 1) {
-                            // If the current speaker is the same as the previous, and sequence numbers are consecutive
-                            concatenatedData[concatenatedData.length - 1].text += ' ' + text;
-                            concatenatedData[concatenatedData.length - 1].timestampRange = concatenatedData[concatenatedData.length - 1].timestampRange.split('-->')[0].trim() + ' --> ' + timestampRange.split('-->')[1].trim();
-                            concatenatedData[concatenatedData.length - 1].sequenceNumber[concatenatedData[concatenatedData.length - 1].sequenceNumber.length - 1] = sequenceNumber;
-                        } else {
-                            concatenatedData.push({
-                                sequenceNumber: [sequenceNumber],
-                                timestampRange: timestampRange,
-                                speaker: speaker,
-                                text: text
-                            });
+                    lines.forEach(line => {
+                        const match = line.match(regex);
+                        if (match) {
+                            // Create an object and add it to the array
+                            const message = {
+                                name: match[1],
+                                text: match[2]
+                            };
+                            messages.push(message);
                         }
                     });
 
-                    // Formatting the output as "speaker: text"
-                    return concatenatedData.map(item => item.speaker ? `${item.speaker}: ${item.text}` : item.text).join('\n');
+                    formatted_whatsapp_chat = messages.map(item => item.name ? `${item.name}: ${item.text}` : item.text).join('\n');
+
+                    axios.post('https://api.openai.com/v1/chat/completions', {
+                        model: "gpt-4-1106-preview",
+                        messages: [
+                            {
+                                content: "I will paste a chat history. Some of the chat history is in English and some of it is in Hindi (written in English alphabets). I want you to generate a summary of this conversation Use the format specified below:\n\n\"From Himanshu'\''s perspective\"\n\"* Summary bullet point 1\"\n\"* Summary bullet point 2\"\n\n\"From Ringi'\''s perspective\"\n\"* Summary bullet point 1\"\n\"* Summary bullet point 2\"",
+                                role: "system"
+                            },
+                            {
+                                content: formatted_whatsapp_chat, // Assuming you want to send the content of inputText
+                                role: "user"
+                            }
+                        ]
+                    }, {
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'Authorization': `Bearer ${this.openApiKey}`
+                        }
+                    })
+                    .then(response => {
+                        const openapi_response = response.data.choices;
+                        if (openapi_response && openapi_response.length > 0) {
+                            this.outputText = openapi_response[0].message.content;
+                            this.errorMessage = ''
+                        } else {
+                            this.outputText = "No response received from OpenAI.";
+                            this.errorMessage = "No response received from OpenAI."; // Set the error message
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error fetching data: ", error);
+                        this.outputText = "An error occurred while processing your request.";
+                        this.errorMessage = error.message + "(" + error.response.data.error.message + ")" || "An unexpected error occurred."; // Set the error message
+                    })
+                    .finally(() => {
+                        this.isProcessing = false;
+                        this.isInputReadOnly = false;
+                    });
                 },
                 processText() {
+                    this.isProcessing = true;
+                    this.isInputReadOnly = true;
                     this.outputText = this.parseAndConcatenateSubtitleText(this.inputText);
-                }
+                },
+                setApiKey() {
+                    // Prompt the user to enter the OpenAPI key
+                    const apiKey = prompt('Please enter your OpenAPI API key:');
+                    if (apiKey !== null && apiKey.trim() !== '') {
+                        // Save the key to local storage and the Vue variable
+                        localStorage.setItem('openapi_key', apiKey);
+                        this.openApiKey = apiKey;
+                    }
+                },
             }
         }).mount('#app');
     </script>
     <style>
-        .full-height {
-            height: 90vh; /* Adjusted to 90vh to leave space for the button and any padding/margins */
+        .text-area-container {
+            height: 500px;
         }
-        textarea {
-            height: 100%;
-            width: 100%;
-        }
+
         .floating-icon {
             position: fixed;
             top: 10px; /* Adjust as needed */
@@ -113,11 +193,16 @@
         }
 
         .floating-icon:hover {
-            color: white; /* Color on hover */
+            color: green; /* Color on hover */
         }
 
         .floating-icon i {
             font-size: 24px; /* Adjust size as needed */
+        }
+
+        .spinner-border {
+            width: 1rem;
+            height: 1rem;
         }
     </style>
 </body>
